--- a/donate/index.html
+++ b/donate/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<link type="text/css" rel="stylesheet" href="public/css/materialize.min.css"  media="screen,projection"/>
+<link type="text/css" rel="stylesheet" href="//weihuagu.github.io/public/css/materialize.min.css"  media="screen,projection"/>
 </head>
 <body>
 <ul class="collection with-header">
