--- a/donate/index.html
+++ b/donate/index.html
@@ -12,7 +12,7 @@
 
                 <li class="collection-item"><p><strong>用支付宝捐赠一元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><img class="alignnone size-medium wp-image-329" src="donate1_0.jpg" sizes="(max-width: 300px) 85vw, 300px" /></p></li>
+                <p><img  src="donate1_0.jpg" sizes="" /></p></li>
 	</ul>
 </body>
 </html>
