--- a/donate/index.html
+++ b/donate/index.html
@@ -12,7 +12,7 @@
 
                 <li class="collection-item"><p><strong>用支付宝捐赠一元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><img  src="donate1_0.jpg" sizes="" /></p></li>
+                <p><img  src="donate1_0.jpg" class="responsive-img" /></p></li>
 	</ul>
 </body>
 </html>
