--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>邮箱：<strong>weihuagu_work@163.com</strong></p></li>
 
                 <li class="collection-item"><p><strong></strong></p>
-                <p>简书：<strong><a href="http://www.jianshu.com/users/2ef944aafef7/latest_articles"></a></strong></p></li>
+                <p>简书：<strong><a href="http://www.jianshu.com/users/2ef944aafef7/latest_articles">http://www.jianshu.com/users/2ef944aafef7/latest_articles</a></strong></p></li>
 	</ul>
       </div>
 
@@ -30,7 +30,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
+                <h5 class="white-text"></h5>
                 <p class="grey-text text-lighten-4"></p>
               </div>
               <div class="col l4 offset-l2 s12">
