--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
     </div>
-<div class="container">
+</div>
    <footer class="page-footer">
           <div class="container">
             <div class="row">
