--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav>      
 				<div class="nav-wrapper">      	
-					<a href="#" class="brand-logo">&nbsp &nbsp铜川建站</a>
+					<a href="#" class="brand-logo">&nbsp &nbsp顾玮华的小网络工作室</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">			
 						
 						<li>
