--- a/donate/index.html
+++ b/donate/index.html
@@ -12,7 +12,14 @@
 
                 <li class="collection-item"><p><strong>用支付宝捐赠一元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><img  src="donate1_0.jpg" class="responsive-img" /></p></li>
+                <p><a href="https://qr.alipay.com/fkx09758bqlwh6d4dqxbe91
+"><img  src="donate1_0.jpg" class="responsive-img" /></a></p></li>
+
+		<li class="collection-item"><p><strong>用支付宝捐赠三元钱</strong></p>
+                <p><strong>weihuagu_work@163.com</strong></p>
+                <p><a href="
+"><img  src="" class="responsive-img" /></a></p></li>
+		
 	</ul>
 </body>
 </html>
