--- a/donate/index.html
+++ b/donate/index.html
@@ -18,7 +18,7 @@
 		<li class="collection-item"><p><strong>用支付宝捐赠三元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
                 <p><a href="
-"><img  src="" class="responsive-img" /></a></p></li>
+"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
 		
 	</ul>
 </body>
