--- a/donate/index.html
+++ b/donate/index.html
@@ -17,7 +17,7 @@
 
 		<li class="collection-item"><p><strong>用支付宝捐赠三元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><a href="http://qr.alipay.com/fkx07376n4rofm5ga9ic90"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
+                <p><a href="HTTPS://QR.ALIPAY.COM/FKX07376N4ROFM5GA9IC90"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
 		
 	</ul>
 </body>
