add paypal donate 00

--- a/donate/index.html
+++ b/donate/index.html
@@ -26,17 +26,11 @@
 		<li class="collection-item"><p>you can donate me by paypal<br /> </p></li>
 
                 <li class="collection-item">
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="WSSMJRGEDTFBJ">
-<table>
-<tr><td><input type="hidden" name="on0" value="donate me $5">donate me $5</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
-</table>
-<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
-</form>
+					    <a href="https://paypal.me/weihuagu/25CNY">donate me 5CNY</a>
+		</li>
 
-
+		<li class="collection-item">
+					    <a href="https://paypal.me/weihuagu/25USD">donate me 5$</a>
 		</li>
 
 	</ul>
