--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="keywords" content="云，网络工作室，铜川"/>
-<meta name="descripion" content="最好的云网络工作室，铜川本地专业建站。"/>
-<title>顾玮华的云网络工作室</title> 
+<meta name="keywords" content="顾玮华"/>
+<meta name="descripion" content="顾玮华"/>
+<title>顾玮华</title> 
 
 <link type="text/css" rel="stylesheet" href="//weihuagu.github.io/public/css/materialize.min.css"  media="screen,projection"/>
 </head>
@@ -13,7 +13,7 @@
 
 <nav>      
 				<div class="nav-wrapper">      	
-					<a href="#" class="brand-logo">&nbsp &nbsp顾玮华的小网络工作室</a>
+					<a href="#" class="brand-logo">&nbsp &nbsp顾玮华</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">			
 						
 						<li>
@@ -31,12 +31,12 @@
 <div class="container">
     <div class="row">
 
-      <div class="col s3">
+      <div class="col s3 m5 s12">
         <!-- Grey navigation panel -->
 	<div class="card-panel hoverable">
 		<div class="card blue-grey darken-1">
 				<div class="card-content white-text">
-						<span class="card-title">simple and clean</span>              <p>铜川企业建站最好的选择。</p>
+						<span class="card-title">simple and clean</span>              <p></p>
 				</div>
 				<div class="card-action white-text">
 				</div>
@@ -57,7 +57,7 @@
       </div>
       </div>
 
-      <div class="col s9">
+      <div class="col s9 m7 s12">
         <!-- Teal page content  -->
 	 <p><img  src="//weihuagu.github.io/public/image/fengjing.jpg" class="responsive-img" /></p>
       </div>
