--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="row">
 
-      <div class="col s3 m3 s12">
+      <div class="col s3 m4 s12">
         <!-- Grey navigation panel -->
 	<div class="card-panel hoverable">
 		<div class="card blue-grey darken-1">
@@ -62,9 +62,9 @@
       </div>
       </div>
 
-      <div class="col s9 m9 s12">
+      <div class="col s9 m8 s12">
         <!-- Teal page content  -->
-	 <p><img  src="//weihuagu.github.io/public/image/fengjing.jpg" class="responsive-img" /></p>
+	 <p><img  src="//weihuagu.github.io/public/image/fengjing.jpg" class="responsive-img hoverable" /></p>
       </div>
 
     </div>
