--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 						</li>  
 						<li>
 							<a href="https://weihuagu.github.io/blog/">blog</a>
-						</li>  
+						</li> 
+						<li>
+							<a href="http://b6dde250-9232-446d-b7d2-faef3ad898af.coding.io/">工作室</a>
+						</li> 
    
 					</ul>      
 				</div>
