--- a/donate/index.html
+++ b/donate/index.html
@@ -17,12 +17,12 @@
 
                 <li class="collection-item"><p><strong>用支付宝捐赠一元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><a href="http://qr.alipay.com/fkx09758bqlwh6d4dqxbe91
+                <p><a href="https://qr.alipay.com/fkx03602bvlrai5jdeitq8a
 "><img  src="donate1_0.jpg" class="responsive-img" /></a></p></li>
 
 		<li class="collection-item"><p><strong>用支付宝捐赠三元钱</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
-                <p><a href="HTTPS://QR.ALIPAY.COM/FKX07376N4ROFM5GA9IC90"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
+                <p><a href="https://qr.alipay.com/fkx08700ktbs6nsk29hrk6c"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
 		
 	</ul>
 
