--- a/donate/index.html
+++ b/donate/index.html
@@ -15,16 +15,7 @@
                 <p><a href="https://qr.alipay.com/tsx08538tsjmvvenkdcyn18
 "><img  src="shoukuanma.jpg" class="responsive-img" /></a></p></li>
 		
-	<!--<li class="collection-item"><p><strong>用支付宝捐赠一元钱(扫描图片或者<a href="alipays://platformapi/startapp?appId=09999988&actionType=toAccount&goBack=NO&amount=1.00&userId=2088402254789964&memo=捐赠">点击</a>)</strong></p>
-                <p><strong>weihuagu_work@163.com</strong></p>
-                <p><a href="https://qr.alipay.com/fkx03602bvlrai5jdeitq8a
-"><img  src="donate1_0.jpg" class="responsive-img" /></a></p></li>-->
-
-		<li class="collection-item"><p><strong>用支付宝捐赠三元钱(扫描图片或者<a href="alipays://platformapi/startapp?appId=09999988&actionType=toAccount&goBack=NO&amount=3.00&userId=2088402254789964&memo=捐赠">点击</a>)</strong></p>
-                <p><strong>weihuagu_work@163.com</strong></p>
-                <p><a href="https://qr.alipay.com/fkx08700ktbs6nsk29hrk6c"><img  src="donate3_0.jpg" class="responsive-img" /></a></p></li>
-	
-		<li class="collection-item"><p><strong>用云闪付捐赠(<a href="https://qr.95516.com/00010002/01122945169070755174003267737264">点击图片</a>或者扫码)</strong></p>
+		<li class="collection-item"><p><strong>用云闪付捐赠(<a href="https://qr.95516.com/00010002/01122945169070755174003267737264">点击图片<a>或者扫码)</strong></p>
                 <p><strong>weihuagu_work@163.com</strong></p>
                 <p><a href="https://qr.95516.com/00010002/01122945169070755174003267737264"><img  src="unionpay.jpg" class="responsive-img" /></a></p></li>
 		
